# fig

./: .gitignore  FLATHUB.md  LICENSE  README.md  SPLIT_THEME.md  com.github.Q1CHENL.fig.desktop  com.github.Q1CHENL.fig.json  com.github.Q1CHENL.fig.metainfo.xml  editor.py  fig.py  flathub.txt  frameline.py  gif_trimmer.py  home.py  io.github.Q1CHENL.fig.desktop  io.github.Q1CHENL.fig.json  io.github.Q1CHENL.fig.metainfo.xml  meson.build  org.flatpak.fig.desktop  org.flatpak.fig.json  org.flatpak.fig.metainfo.xml  requirements.txt  setting.py  setup.py  split-theme.txt  style.css  submission.txt  trif.py  ui.py  utils.py  vbump.py
fig/: __main__.py  crop.py  cropoverlay.py  editor.py  fig.py  frameline.py  home.py  main.py  overlay.py  utils.py
style/: about-fig-button.css  action-bar.css  action-button.css  color-button.css  controls-box.css  drag-and-drop.css  headerbar.css  info-label.css  loop-button.css  menu-item.css  play-button.css  save-button.css  select-gif-button.css  speed-entry.css  style.css  text-entry.css
test/: test.py
tests/: test_editor.py
